@startuml

title __STATE's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      class es.ull.patrones.state.OnGreen {
          - clip : Clip
          - sound : AudioInputStream
          - time : long
          + OnGreen()
          + getTime()
          + nextState()
          + setTrafficLights()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      class es.ull.patrones.state.OnOrange {
          - clip : Clip
          - sound : AudioInputStream
          - time : long
          + OnOrange()
          + getTime()
          + nextState()
          + setTrafficLights()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      class es.ull.patrones.state.OnRed {
          - clip : Clip
          - sound : AudioInputStream
          - time : long
          + OnRed()
          + getTime()
          + nextState()
          + setTrafficLights()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      interface es.ull.patrones.state.State {
          {abstract} + getTime()
          {abstract} + nextState()
          {abstract} + setTrafficLights()
      }
    }
  }
  

  es.ull.patrones.state.OnGreen .up.|> es.ull.patrones.state.State
  es.ull.patrones.state.OnGreen o-- es.ull.patrones.trafficLight.TrafficLight : trafficLight
  es.ull.patrones.state.OnOrange .up.|> es.ull.patrones.state.State
  es.ull.patrones.state.OnOrange o-- es.ull.patrones.trafficLight.TrafficLight : trafficLight
  es.ull.patrones.state.OnRed .up.|> es.ull.patrones.state.State
  es.ull.patrones.state.OnRed o-- es.ull.patrones.trafficLight.TrafficLight : trafficLight


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
